# substreams-test

./: Cargo.toml  Makefile  substreams-rain-v1.0.0.spkg  substreams.yaml
proto/sf/substreams/sink/files/v1/: files.proto
src/: lib.rs
src/pb/: mod.rs
