[package]
name = "substreams-rain"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.0"
substreams-solana = "0.2.0"
prost = "0.11"
bs58 = "0.4.0"
borsh = "0.10.3"
num-bigint = "0.4"
jsonl = "4.0.1"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.95"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"